reassigned quiz due dates

--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,11 +409,17 @@
     "                                                                    '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]    \n",
     "    \n",
     "    \n",
-    "    fa_times_all = file_utimes_all + assn_utimes_all + page_utimes_all + dtopics_utimes_all + quizzes_utimes_all\n",
-    "    fa_c_times_all = file_ctimes_all + assn_ctimes_all + page_ctimes_all + dtopics_ctimes_all + quizzes_ctimes_all\n",
+    "    #fa_times_all = file_utimes_all + assn_utimes_all + page_utimes_all + dtopics_utimes_all + quizzes_utimes_all\n",
+    "    #fa_c_times_all = file_ctimes_all + assn_ctimes_all + page_ctimes_all + dtopics_ctimes_all + quizzes_ctimes_all\n",
     "\n",
-    "    fa_times = file_utimes + assn_utimes + page_utimes + dtopics_utimes + quizzes_utimes\n",
-    "    fa_c_times = file_ctimes + assn_ctimes + page_ctimes + dtopics_ctimes + quizzes_ctimes\n",
+    "    #fa_times = file_utimes + assn_utimes + page_utimes + dtopics_utimes + quizzes_utimes\n",
+    "    #fa_c_times = file_ctimes + assn_ctimes + page_ctimes + dtopics_ctimes + quizzes_ctimes\n",
+    "    \n",
+    "    fa_times_all = file_utimes_all + assn_utimes_all + page_utimes_all + dtopics_utimes_all\n",
+    "    fa_c_times_all = file_ctimes_all + assn_ctimes_all + page_ctimes_all + dtopics_ctimes_all\n",
+    "\n",
+    "    fa_times = file_utimes + assn_utimes + page_utimes + dtopics_utimes\n",
+    "    fa_c_times = file_ctimes + assn_ctimes + page_ctimes + dtopics_ctimes\n",
     "\n",
     "\n",
     "    #Convert the whole thing \n",
@@ -433,11 +439,20 @@
     "    except:\n",
     "        fa_c_min = None\n",
     "\n",
+    "    #find the farthest due/lock_at date for quizzes:\n",
+    "    q_times = quizzes_utimes + quizzes_ctimes\n",
+    "    q_times_all = quizzes_utimes_all + quizzes_ctimes_all\n",
+    "    try:\n",
+    "        q_max = q_times.max() if len(q_times)>0 else q_times_all.max()\n",
+    "    except:\n",
+    "        q_max = None\n",
+    "  \n",
+    "    \n",
     "    return [course_id, course_sis_id, course_dept, enrollment_term, parent_account, course_name, course_state,\n",
     "            len(file_utimes_all), len(assn_utimes_all), len(fa_times_all), \n",
     "            fa_max, fa_c_min, num_students, is_public, public_syllabus,\n",
     "           public_syllabus_to_auth, is_public_to_auth_users, course_visibility, num_published_dis_topics,\n",
-    "            num_published_pages, num_published_quizzes, num_assignment_groups,num_modules, num_module_items]\n",
+    "            num_published_pages, num_published_quizzes, num_assignment_groups,num_modules, num_module_items, q_max]\n",
     "\n"
    ]
   },
@@ -679,20 +694,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-17-ad155ea09677>:238: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-24-cd78ef50859f>:237: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-17-ad155ea09677>:239: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-24-cd78ef50859f>:238: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-17-ad155ea09677>:241: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-24-cd78ef50859f>:240: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-17-ad155ea09677>:242: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-24-cd78ef50859f>:241: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n"
      ]
     },
@@ -700,7 +715,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 26)\n"
+      "(5, 27)\n"
      ]
     },
     {
@@ -735,7 +750,6 @@
        "      <th>num_assignments</th>\n",
        "      <th>num_tot_fa</th>\n",
        "      <th>...</th>\n",
-       "      <th>is_public_to_auth_users</th>\n",
        "      <th>course_visibility</th>\n",
        "      <th>num_published_dis_topics</th>\n",
        "      <th>num_published_pages</th>\n",
@@ -743,6 +757,7 @@
        "      <th>num_assignment_groups</th>\n",
        "      <th>num_modules</th>\n",
        "      <th>num_module_items</th>\n",
+       "      <th>farthest_quiz_due_lock_date</th>\n",
        "      <th>if_LT_led</th>\n",
        "      <th>LT_email</th>\n",
        "    </tr>\n",
@@ -761,7 +776,6 @@
        "      <td>20</td>\n",
        "      <td>28</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
        "      <td>public</td>\n",
        "      <td>4</td>\n",
        "      <td>5</td>\n",
@@ -769,6 +783,7 @@
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "      <td>38</td>\n",
+       "      <td>None</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -785,7 +800,6 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
        "      <td>not_public_to_auth_users</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -793,6 +807,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>None</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -809,7 +824,6 @@
        "      <td>9</td>\n",
        "      <td>75</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
        "      <td>not_public_to_auth_users</td>\n",
        "      <td>12</td>\n",
        "      <td>2</td>\n",
@@ -817,6 +831,7 @@
        "      <td>1</td>\n",
        "      <td>14</td>\n",
        "      <td>64</td>\n",
+       "      <td>None</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -833,7 +848,6 @@
        "      <td>44</td>\n",
        "      <td>146</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
        "      <td>not_public_to_auth_users</td>\n",
        "      <td>0</td>\n",
        "      <td>8</td>\n",
@@ -841,6 +855,7 @@
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "      <td>53</td>\n",
+       "      <td>None</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -857,7 +872,6 @@
        "      <td>6</td>\n",
        "      <td>11</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
        "      <td>institute</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
@@ -865,12 +879,13 @@
        "      <td>1</td>\n",
        "      <td>9</td>\n",
        "      <td>0</td>\n",
+       "      <td>None</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
+       "<p>5 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -895,31 +910,38 @@
        "3                         Russian IV    available         93               44   \n",
        "4             Japanese I (Section 1)    available          2                6   \n",
        "\n",
-       "   num_tot_fa  ... is_public_to_auth_users         course_visibility  \\\n",
-       "0          28  ...                   False                    public   \n",
-       "1           2  ...                   False  not_public_to_auth_users   \n",
-       "2          75  ...                   False  not_public_to_auth_users   \n",
-       "3         146  ...                   False  not_public_to_auth_users   \n",
-       "4          11  ...                    True                 institute   \n",
+       "   num_tot_fa  ...         course_visibility num_published_dis_topics  \\\n",
+       "0          28  ...                    public                        4   \n",
+       "1           2  ...  not_public_to_auth_users                        1   \n",
+       "2          75  ...  not_public_to_auth_users                       12   \n",
+       "3         146  ...  not_public_to_auth_users                        0   \n",
+       "4          11  ...                 institute                        0   \n",
        "\n",
-       "   num_published_dis_topics  num_published_pages  num_published_quizzes  \\\n",
-       "0                         4                    5                      3   \n",
-       "1                         1                    0                      1   \n",
-       "2                        12                    2                      0   \n",
-       "3                         0                    8                     15   \n",
-       "4                         0                    3                      0   \n",
+       "   num_published_pages  num_published_quizzes  num_assignment_groups  \\\n",
+       "0                    5                      3                      1   \n",
+       "1                    0                      1                      1   \n",
+       "2                    2                      0                      1   \n",
+       "3                    8                     15                      1   \n",
+       "4                    3                      0                      1   \n",
        "\n",
-       "   num_assignment_groups  num_modules num_module_items  if_LT_led  LT_email  \n",
-       "0                      1            6               38          0       NaN  \n",
-       "1                      1            0                0          0       NaN  \n",
-       "2                      1           14               64          0       NaN  \n",
-       "3                      1            6               53          0       NaN  \n",
-       "4                      1            9                0          0       NaN  \n",
+       "   num_modules  num_module_items farthest_quiz_due_lock_date  if_LT_led  \\\n",
+       "0            6                38                        None          0   \n",
+       "1            0                 0                        None          0   \n",
+       "2           14                64                        None          0   \n",
+       "3            6                53                        None          0   \n",
+       "4            9                 0                        None          0   \n",
        "\n",
-       "[5 rows x 26 columns]"
+       "   LT_email  \n",
+       "0       NaN  \n",
+       "1       NaN  \n",
+       "2       NaN  \n",
+       "3       NaN  \n",
+       "4       NaN  \n",
+       "\n",
+       "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +954,7 @@
     "    'course_state', 'num_files','num_assignments','num_tot_fa','last_update_at','first_created_at', 'num_students',\n",
     "            'is_public', 'public_syllabus', 'public_syllabus_to_auth', 'is_public_to_auth_users', 'course_visibility',\n",
     "            'num_published_dis_topics','num_published_pages', 'num_published_quizzes', 'num_assignment_groups',\n",
-    "                          'num_modules', 'num_module_items']\n",
+    "                          'num_modules', 'num_module_items','farthest_quiz_due_lock_date']\n",
     "\n",
     "if run_mode == 'dev' or run_mode=='mig':\n",
     "    num_courses = 5\n",
@@ -951,20 +973,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-17-ad155ea09677>:238: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-24-cd78ef50859f>:237: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-17-ad155ea09677>:239: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-24-cd78ef50859f>:238: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-17-ad155ea09677>:241: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-24-cd78ef50859f>:240: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-17-ad155ea09677>:242: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-24-cd78ef50859f>:241: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n"
      ]
     },
@@ -972,7 +994,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(17, 26)\n"
+      "(17, 27)\n"
      ]
     }
    ],
@@ -1014,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
