--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,20 +373,21 @@
     "                                                                    '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]\n",
     "\n",
     "    #Get the quizzes lock_at times\n",
-    "    quizzes_utimes_all = [f_.lock_at for f_ in list_quizzes if f_.lock_at != None ]\n",
+    "    #quizzes_utimes_all = [f_.lock_at for f_ in list_quizzes if f_.lock_at != None ]\n",
     "    #Get the quizzes due times\n",
-    "    quizzes_ctimes_all = [f_.due_at for f_ in list_quizzes if f_.due_at != None  ]\n",
+    "    #quizzes_ctimes_all = [f_.due_at for f_ in list_quizzes if f_.due_at != None  ]\n",
     "    \n",
     "    quizzes_utimes = []\n",
     "    quizzes_ctimes = []\n",
     "    for f_ in list_quizzes:\n",
     "        try:\n",
-    "            if datetime.strptime(f_.lock_at, '%Y-%m-%dT%H:%M:%SZ') > cutoff_date:\n",
+    "            #if datetime.strptime(f_.lock_at, '%Y-%m-%dT%H:%M:%SZ') > cutoff_date:\n",
+    "            if f_.lock_at != None:\n",
     "                quizzes_utimes.append(f_.lock_at)\n",
     "        except:\n",
     "            pass\n",
     "        try:\n",
-    "            if datetime.strptime(f_.due_at, '%Y-%m-%dT%H:%M:%SZ') > cutoff_date:\n",
+    "            if f_.due_at != None:\n",
     "                quizzes_ctimes.append(f_.due_at)\n",
     "        except:\n",
     "            pass                \n",
@@ -409,12 +410,6 @@
     "                                                                    '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]    \n",
     "    \n",
     "    \n",
-    "    #fa_times_all = file_utimes_all + assn_utimes_all + page_utimes_all + dtopics_utimes_all + quizzes_utimes_all\n",
-    "    #fa_c_times_all = file_ctimes_all + assn_ctimes_all + page_ctimes_all + dtopics_ctimes_all + quizzes_ctimes_all\n",
-    "\n",
-    "    #fa_times = file_utimes + assn_utimes + page_utimes + dtopics_utimes + quizzes_utimes\n",
-    "    #fa_c_times = file_ctimes + assn_ctimes + page_ctimes + dtopics_ctimes + quizzes_ctimes\n",
-    "    \n",
     "    fa_times_all = file_utimes_all + assn_utimes_all + page_utimes_all + dtopics_utimes_all\n",
     "    fa_c_times_all = file_ctimes_all + assn_ctimes_all + page_ctimes_all + dtopics_ctimes_all\n",
     "\n",
@@ -429,6 +424,7 @@
     "    fa_times = np.array(fa_times, dtype='datetime64')\n",
     "    fa_c_times = np.array(fa_c_times, dtype='datetime64')      \n",
     "\n",
+    "\n",
     "    try:\n",
     "        fa_max = fa_times.max() if len(fa_times)>0 else fa_times_all.max()\n",
     "    except:\n",
@@ -441,13 +437,13 @@
     "\n",
     "    #find the farthest due/lock_at date for quizzes:\n",
     "    q_times = quizzes_utimes + quizzes_ctimes\n",
-    "    q_times_all = quizzes_utimes_all + quizzes_ctimes_all\n",
+    "    q_times = np.array(q_times, dtype='datetime64')\n",
+    "\n",
     "    try:\n",
-    "        q_max = q_times.max() if len(q_times)>0 else q_times_all.max()\n",
+    "        q_max = q_times.max() if len(q_times)>0 else None\n",
     "    except:\n",
     "        q_max = None\n",
     "  \n",
-    "    \n",
     "    return [course_id, course_sis_id, course_dept, enrollment_term, parent_account, course_name, course_state,\n",
     "            len(file_utimes_all), len(assn_utimes_all), len(fa_times_all), \n",
     "            fa_max, fa_c_min, num_students, is_public, public_syllabus,\n",
@@ -458,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +653,7 @@
        "[13054 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,21 +690,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-24-cd78ef50859f>:237: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-57-84a9b5a8d51a>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-24-cd78ef50859f>:238: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-57-84a9b5a8d51a>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-24-cd78ef50859f>:240: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-57-84a9b5a8d51a>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-24-cd78ef50859f>:241: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
-      "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n"
+      "<ipython-input-57-84a9b5a8d51a>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
+      "<ipython-input-57-84a9b5a8d51a>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "  q_times = np.array(q_times, dtype='datetime64')\n"
      ]
     },
     {
@@ -783,7 +781,7 @@
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "      <td>38</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -807,7 +805,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>None</td>\n",
+       "      <td>2016-10-08 03:59:00</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -831,7 +829,7 @@
        "      <td>1</td>\n",
        "      <td>14</td>\n",
        "      <td>64</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -855,7 +853,7 @@
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "      <td>53</td>\n",
-       "      <td>None</td>\n",
+       "      <td>2017-03-03 06:59:59</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -879,7 +877,7 @@
        "      <td>1</td>\n",
        "      <td>9</td>\n",
        "      <td>0</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -925,11 +923,11 @@
        "4                    3                      0                      1   \n",
        "\n",
        "   num_modules  num_module_items farthest_quiz_due_lock_date  if_LT_led  \\\n",
-       "0            6                38                        None          0   \n",
-       "1            0                 0                        None          0   \n",
-       "2           14                64                        None          0   \n",
-       "3            6                53                        None          0   \n",
-       "4            9                 0                        None          0   \n",
+       "0            6                38                         NaT          0   \n",
+       "1            0                 0         2016-10-08 03:59:00          0   \n",
+       "2           14                64                         NaT          0   \n",
+       "3            6                53         2017-03-03 06:59:59          0   \n",
+       "4            9                 0                         NaT          0   \n",
        "\n",
        "   LT_email  \n",
        "0       NaN  \n",
@@ -941,7 +939,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,21 +971,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-24-cd78ef50859f>:237: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-57-84a9b5a8d51a>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-24-cd78ef50859f>:238: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-57-84a9b5a8d51a>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-24-cd78ef50859f>:240: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-57-84a9b5a8d51a>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-24-cd78ef50859f>:241: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
-      "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n"
+      "<ipython-input-57-84a9b5a8d51a>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
+      "<ipython-input-57-84a9b5a8d51a>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "  q_times = np.array(q_times, dtype='datetime64')\n"
      ]
     },
     {
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,18 +1068,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_courses_df['last_update_at'] = all_courses_df['last_update_at'].dt.strftime('%Y-%m-%d')\n",
     "all_courses_df['first_created_at'] = all_courses_df['first_created_at'].dt.strftime('%Y-%m-%d')\n",
+    "all_courses_df['farthest_quiz_due_lock_date'] = all_courses_df['farthest_quiz_due_lock_date'].dt.strftime('%Y-%m-%d')\n",
     "#all_courses_df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
