--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,16 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7fbd9a3f3e50>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7fb32ee4c2b0>}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -566,94 +566,81 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13049</th>\n",
-       "      <td>14941</td>\n",
-       "      <td>Responsible Employee Obligation Module</td>\n",
-       "      <td>Responsible Employee Obligation Module</td>\n",
+       "      <th>15480</th>\n",
+       "      <td>17561</td>\n",
+       "      <td>crawfjen:20220824</td>\n",
+       "      <td>Temporary Sandbox</td>\n",
        "      <td>139</td>\n",
-       "      <td>2022-03-09T22:35:22Z</td>\n",
+       "      <td>2022-08-24T06:03:56Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13050</th>\n",
-       "      <td>14942</td>\n",
-       "      <td>TA Training Sandbox</td>\n",
-       "      <td>TA Training Sandbox</td>\n",
-       "      <td>139</td>\n",
-       "      <td>2022-03-10T20:22:09Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13051</th>\n",
-       "      <td>14943</td>\n",
-       "      <td>6.S974</td>\n",
-       "      <td>6.S974 Special Subject in EECS</td>\n",
+       "      <th>15481</th>\n",
+       "      <td>17562</td>\n",
+       "      <td>6.4212</td>\n",
+       "      <td>6.4212 Robotic Manipulation</td>\n",
        "      <td>96</td>\n",
-       "      <td>2022-03-11T14:33:26Z</td>\n",
+       "      <td>2022-08-24T15:19:40Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13052</th>\n",
-       "      <td>14944</td>\n",
-       "      <td>JZ_SB2_SP22</td>\n",
-       "      <td>Joseph Zacher Sandbox 2</td>\n",
-       "      <td>17</td>\n",
-       "      <td>2022-03-22T14:41:49Z</td>\n",
+       "      <th>15482</th>\n",
+       "      <td>17563</td>\n",
+       "      <td>LING123</td>\n",
+       "      <td>Industry workshop 2022</td>\n",
+       "      <td>139</td>\n",
+       "      <td>2022-08-26T12:02:55Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13053</th>\n",
-       "      <td>14945</td>\n",
-       "      <td>IDS.NIV</td>\n",
-       "      <td>IDS.NIV Visiting Student Research</td>\n",
+       "      <th>15483</th>\n",
+       "      <td>17564</td>\n",
+       "      <td>IDS.330</td>\n",
+       "      <td>IDS.330 Real Optns for Prod &amp; Sys Dsgn</td>\n",
        "      <td>106</td>\n",
-       "      <td>2022-03-23T13:33:26Z</td>\n",
+       "      <td>2022-08-27T12:33:25Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15484</th>\n",
+       "      <td>17565</td>\n",
+       "      <td>EC.S00</td>\n",
+       "      <td>EC.S00 Special Subject: Edgerton Ctr</td>\n",
+       "      <td>134</td>\n",
+       "      <td>2022-08-27T12:33:25Z</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>13054 rows × 5 columns</p>\n",
+       "<p>15485 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       course_id                             course_code  \\\n",
-       "0              1                       welcome-to-canvas   \n",
-       "1             16                                     GSL   \n",
-       "2             17                         21G.067/21G.597   \n",
-       "3             18                                 21G.614   \n",
-       "4             20                                 21G.501   \n",
-       "...          ...                                     ...   \n",
-       "13049      14941  Responsible Employee Obligation Module   \n",
-       "13050      14942                     TA Training Sandbox   \n",
-       "13051      14943                                  6.S974   \n",
-       "13052      14944                             JZ_SB2_SP22   \n",
-       "13053      14945                                 IDS.NIV   \n",
+       "       course_id        course_code                             course_name  \\\n",
+       "0              1  welcome-to-canvas                       Welcome to Canvas   \n",
+       "1             16                GSL                        GSL Canvas Pilot   \n",
+       "2             17    21G.067/21G.597       Digital Media in Japan and Korea    \n",
+       "3             18            21G.614                              Russian IV   \n",
+       "4             20            21G.501                  Japanese I (Section 1)   \n",
+       "...          ...                ...                                     ...   \n",
+       "15480      17561  crawfjen:20220824                       Temporary Sandbox   \n",
+       "15481      17562             6.4212             6.4212 Robotic Manipulation   \n",
+       "15482      17563            LING123                  Industry workshop 2022   \n",
+       "15483      17564            IDS.330  IDS.330 Real Optns for Prod & Sys Dsgn   \n",
+       "15484      17565             EC.S00    EC.S00 Special Subject: Edgerton Ctr   \n",
        "\n",
-       "                                  course_name  account_id  \\\n",
-       "0                           Welcome to Canvas           1   \n",
-       "1                            GSL Canvas Pilot          15   \n",
-       "2           Digital Media in Japan and Korea           11   \n",
-       "3                                  Russian IV          14   \n",
-       "4                      Japanese I (Section 1)          11   \n",
-       "...                                       ...         ...   \n",
-       "13049  Responsible Employee Obligation Module         139   \n",
-       "13050                     TA Training Sandbox         139   \n",
-       "13051          6.S974 Special Subject in EECS          96   \n",
-       "13052                 Joseph Zacher Sandbox 2          17   \n",
-       "13053       IDS.NIV Visiting Student Research         106   \n",
+       "       account_id            created_at  \n",
+       "0               1  2016-01-07T16:30:12Z  \n",
+       "1              15  2016-10-03T14:39:27Z  \n",
+       "2              11  2016-10-03T19:42:20Z  \n",
+       "3              14  2016-10-11T13:39:46Z  \n",
+       "4              11  2016-10-11T13:55:59Z  \n",
+       "...           ...                   ...  \n",
+       "15480         139  2022-08-24T06:03:56Z  \n",
+       "15481          96  2022-08-24T15:19:40Z  \n",
+       "15482         139  2022-08-26T12:02:55Z  \n",
+       "15483         106  2022-08-27T12:33:25Z  \n",
+       "15484         134  2022-08-27T12:33:25Z  \n",
        "\n",
-       "                 created_at  \n",
-       "0      2016-01-07T16:30:12Z  \n",
-       "1      2016-10-03T14:39:27Z  \n",
-       "2      2016-10-03T19:42:20Z  \n",
-       "3      2016-10-11T13:39:46Z  \n",
-       "4      2016-10-11T13:55:59Z  \n",
-       "...                     ...  \n",
-       "13049  2022-03-09T22:35:22Z  \n",
-       "13050  2022-03-10T20:22:09Z  \n",
-       "13051  2022-03-11T14:33:26Z  \n",
-       "13052  2022-03-22T14:41:49Z  \n",
-       "13053  2022-03-23T13:33:26Z  \n",
-       "\n",
-       "[13054 rows x 5 columns]"
+       "[15485 rows x 5 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,22 +677,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-57-84a9b5a8d51a>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-8-84a9b5a8d51a>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-57-84a9b5a8d51a>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-8-84a9b5a8d51a>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-57-84a9b5a8d51a>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-8-84a9b5a8d51a>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-57-84a9b5a8d51a>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-8-84a9b5a8d51a>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
-      "<ipython-input-57-84a9b5a8d51a>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-8-84a9b5a8d51a>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  q_times = np.array(q_times, dtype='datetime64')\n"
      ]
     },
@@ -939,7 +926,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,22 +958,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-57-84a9b5a8d51a>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-8-84a9b5a8d51a>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-57-84a9b5a8d51a>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-8-84a9b5a8d51a>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-57-84a9b5a8d51a>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-8-84a9b5a8d51a>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-57-84a9b5a8d51a>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-8-84a9b5a8d51a>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
-      "<ipython-input-57-84a9b5a8d51a>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-8-84a9b5a8d51a>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  q_times = np.array(q_times, dtype='datetime64')\n"
      ]
     },
@@ -994,7 +981,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(17, 27)\n"
+      "(13, 27)\n"
      ]
     }
    ],
@@ -1036,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,9 +1033,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/anindyaroy/opt/anaconda3/envs/venv/lib/python3.9/site-packages/pandas/core/arrays/datetimes.py:2224: FutureWarning: The parsing of 'now' in pd.to_datetime without `utc=True` is deprecated. In a future version, this will match Timestamp('now') and Timestamp.now()\n",
+      "  result, tz_parsed = tslib.array_to_datetime(\n"
+     ]
+    }
+   ],
    "source": [
     "ts_cutoff_1w = pd.to_datetime('now') - pd.to_timedelta('7days')\n",
     "ts_cutoff_1m = pd.to_datetime('now') - pd.to_timedelta('30days')\n",
@@ -1068,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
