--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -55,22 +55,26 @@
     "\n",
     "if run_mode == 'dev':\n",
     "    out_table = \"all_courses3\"\n",
+    "    tab_out_table = \"all_course_tabs3\"\n",
     "    \n",
     "elif run_mode == 'prod':\n",
     "    out_table = \"all_courses4\"\n",
+    "    tab_out_table = \"all_course_tabs4\"    \n",
     "\n",
     "elif run_mode == 'prod_home':\n",
     "    out_table = \"all_courses4\"\n",
+    "    tab_out_table = \"all_course_tabs4\"    \n",
     "\n",
     "    \n",
     "elif run_mode == 'mig':\n",
     "    out_table = \"all_courses3\"\n",
+    "    tab_out_table = \"all_course_tabs3\"    \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,16 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7fb32ee4c2b0>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7fdabac68c40>}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,6 +152,29 @@
     "lt_df = lt_df[lt_existing_cols]\n",
     "lt_df.columns = lt_df_new_cols\n",
     "lt_df['Email'] = lt_df.Email.str.lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define parameters etc. for course tab table\n",
+    "\n",
+    "* The tab information for each course will be obtained along with the course information\n",
+    "* They will be appended in a list\n",
+    "* The list will be turned to a dataframe and sent to GBQ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tab_keys = ['id', 'html_url', 'full_url', 'position', 'visibility', 'label', 'type', 'course_id']\n",
+    "tab_header = ['course_name']\n",
+    "tab_header.extend(tab_keys)\n",
+    "all_tabs_list = []"
    ]
   },
   {
@@ -183,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,6 +470,19 @@
     "        q_max = q_times.max() if len(q_times)>0 else None\n",
     "    except:\n",
     "        q_max = None\n",
+    "        \n",
+    "    try:    \n",
+    "        #Get all tabs for this course\n",
+    "        all_tabs = c1.get_tabs()\n",
+    "\n",
+    "        #Append the list of tabs to all_tabs_list\n",
+    "        for tab_ in all_tabs:\n",
+    "            tab_list = [c1.name]\n",
+    "            tab_list.extend([tab_.__dict__[tk_] for tk_ in tab_keys])\n",
+    "            all_tabs_list.append(tab_list)\n",
+    "\n",
+    "    except:\n",
+    "        pass\n",
     "  \n",
     "    return [course_id, course_sis_id, course_dept, enrollment_term, parent_account, course_name, course_state,\n",
     "            len(file_utimes_all), len(assn_utimes_all), len(fa_times_all), \n",
@@ -454,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -567,22 +607,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15480</th>\n",
-       "      <td>17561</td>\n",
-       "      <td>crawfjen:20220824</td>\n",
-       "      <td>Temporary Sandbox</td>\n",
-       "      <td>139</td>\n",
-       "      <td>2022-08-24T06:03:56Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15481</th>\n",
-       "      <td>17562</td>\n",
-       "      <td>6.4212</td>\n",
-       "      <td>6.4212 Robotic Manipulation</td>\n",
-       "      <td>96</td>\n",
-       "      <td>2022-08-24T15:19:40Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15482</th>\n",
        "      <td>17563</td>\n",
        "      <td>LING123</td>\n",
        "      <td>Industry workshop 2022</td>\n",
@@ -590,7 +614,7 @@
        "      <td>2022-08-26T12:02:55Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15483</th>\n",
+       "      <th>15481</th>\n",
        "      <td>17564</td>\n",
        "      <td>IDS.330</td>\n",
        "      <td>IDS.330 Real Optns for Prod &amp; Sys Dsgn</td>\n",
@@ -598,12 +622,28 @@
        "      <td>2022-08-27T12:33:25Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15484</th>\n",
+       "      <th>15482</th>\n",
        "      <td>17565</td>\n",
        "      <td>EC.S00</td>\n",
        "      <td>EC.S00 Special Subject: Edgerton Ctr</td>\n",
        "      <td>134</td>\n",
        "      <td>2022-08-27T12:33:25Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15483</th>\n",
+       "      <td>17566</td>\n",
+       "      <td>21G.702 L01</td>\n",
+       "      <td>21G.702 Spanish II, Lecture 1 (Yagüe González)</td>\n",
+       "      <td>113</td>\n",
+       "      <td>2022-08-30T14:29:17Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15484</th>\n",
+       "      <td>17567</td>\n",
+       "      <td>21G.702 L03</td>\n",
+       "      <td>21G.702 Spanish II, Lecture 3</td>\n",
+       "      <td>113</td>\n",
+       "      <td>2022-08-30T14:45:25Z</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -611,36 +651,49 @@
        "</div>"
       ],
       "text/plain": [
-       "       course_id        course_code                             course_name  \\\n",
-       "0              1  welcome-to-canvas                       Welcome to Canvas   \n",
-       "1             16                GSL                        GSL Canvas Pilot   \n",
-       "2             17    21G.067/21G.597       Digital Media in Japan and Korea    \n",
-       "3             18            21G.614                              Russian IV   \n",
-       "4             20            21G.501                  Japanese I (Section 1)   \n",
-       "...          ...                ...                                     ...   \n",
-       "15480      17561  crawfjen:20220824                       Temporary Sandbox   \n",
-       "15481      17562             6.4212             6.4212 Robotic Manipulation   \n",
-       "15482      17563            LING123                  Industry workshop 2022   \n",
-       "15483      17564            IDS.330  IDS.330 Real Optns for Prod & Sys Dsgn   \n",
-       "15484      17565             EC.S00    EC.S00 Special Subject: Edgerton Ctr   \n",
+       "       course_id        course_code  \\\n",
+       "0              1  welcome-to-canvas   \n",
+       "1             16                GSL   \n",
+       "2             17    21G.067/21G.597   \n",
+       "3             18            21G.614   \n",
+       "4             20            21G.501   \n",
+       "...          ...                ...   \n",
+       "15480      17563            LING123   \n",
+       "15481      17564            IDS.330   \n",
+       "15482      17565             EC.S00   \n",
+       "15483      17566        21G.702 L01   \n",
+       "15484      17567        21G.702 L03   \n",
        "\n",
-       "       account_id            created_at  \n",
-       "0               1  2016-01-07T16:30:12Z  \n",
-       "1              15  2016-10-03T14:39:27Z  \n",
-       "2              11  2016-10-03T19:42:20Z  \n",
-       "3              14  2016-10-11T13:39:46Z  \n",
-       "4              11  2016-10-11T13:55:59Z  \n",
-       "...           ...                   ...  \n",
-       "15480         139  2022-08-24T06:03:56Z  \n",
-       "15481          96  2022-08-24T15:19:40Z  \n",
-       "15482         139  2022-08-26T12:02:55Z  \n",
-       "15483         106  2022-08-27T12:33:25Z  \n",
-       "15484         134  2022-08-27T12:33:25Z  \n",
+       "                                          course_name  account_id  \\\n",
+       "0                                   Welcome to Canvas           1   \n",
+       "1                                    GSL Canvas Pilot          15   \n",
+       "2                   Digital Media in Japan and Korea           11   \n",
+       "3                                          Russian IV          14   \n",
+       "4                              Japanese I (Section 1)          11   \n",
+       "...                                               ...         ...   \n",
+       "15480                          Industry workshop 2022         139   \n",
+       "15481          IDS.330 Real Optns for Prod & Sys Dsgn         106   \n",
+       "15482            EC.S00 Special Subject: Edgerton Ctr         134   \n",
+       "15483  21G.702 Spanish II, Lecture 1 (Yagüe González)         113   \n",
+       "15484                   21G.702 Spanish II, Lecture 3         113   \n",
+       "\n",
+       "                 created_at  \n",
+       "0      2016-01-07T16:30:12Z  \n",
+       "1      2016-10-03T14:39:27Z  \n",
+       "2      2016-10-03T19:42:20Z  \n",
+       "3      2016-10-11T13:39:46Z  \n",
+       "4      2016-10-11T13:55:59Z  \n",
+       "...                     ...  \n",
+       "15480  2022-08-26T12:02:55Z  \n",
+       "15481  2022-08-27T12:33:25Z  \n",
+       "15482  2022-08-27T12:33:25Z  \n",
+       "15483  2022-08-30T14:29:17Z  \n",
+       "15484  2022-08-30T14:45:25Z  \n",
        "\n",
        "[15485 rows x 5 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,22 +730,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-8-84a9b5a8d51a>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-9258413be3aa>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-8-84a9b5a8d51a>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-9258413be3aa>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-8-84a9b5a8d51a>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-9258413be3aa>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-8-84a9b5a8d51a>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-9258413be3aa>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
-      "<ipython-input-8-84a9b5a8d51a>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-9258413be3aa>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  q_times = np.array(q_times, dtype='datetime64')\n"
      ]
     },
@@ -926,7 +979,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,22 +1011,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-8-84a9b5a8d51a>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-9258413be3aa>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-8-84a9b5a8d51a>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-9258413be3aa>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-8-84a9b5a8d51a>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-9258413be3aa>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-8-84a9b5a8d51a>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-9258413be3aa>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
-      "<ipython-input-8-84a9b5a8d51a>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-9258413be3aa>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  q_times = np.array(q_times, dtype='datetime64')\n"
      ]
     },
@@ -1023,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,6 +1139,19 @@
     "\n",
     "all_courses_df.to_gbq('lt_courses.{}'.format(out_table), project_id, if_exists='replace', credentials=credentials)\n",
     "#all_courses_df.to_csv('all_courses.csv', index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create course tab dataframe from the list:\n",
+    "course_tab_df = pd.DataFrame.from_records(all_tabs_list, columns=tab_header)\n",
+    "\n",
+    "#Send out course tabs dataframe to GBQ\n",
+    "course_tab_df.to_gbq('lt_courses.{}'.format(tab_out_table), project_id, if_exists='replace', credentials=credentials)"
    ]
   },
   {
